[gd_scene load_steps=6 format=3 uid="uid://c36ncd5uhao2q"]

[ext_resource type="Script" path="res://scenes/gui/level_up/level_up_panel.gd" id="1_3u575"]
[ext_resource type="AudioStream" uid="uid://cb68dqfsw2ei5" path="res://res/sound/sfx/level_up.wav" id="1_20wpr"]
[ext_resource type="FontFile" uid="uid://bsgwxsvilbma6" path="res://res/font/ttf/highres/ChevyRay - Rise.ttf" id="1_lmw3m"]
[ext_resource type="PackedScene" uid="uid://bp625i2ak2skc" path="res://scenes/gui/level_up/level_up_option.tscn" id="3_dvewp"]

[sub_resource type="LabelSettings" id="LabelSettings_8slju"]
font = ExtResource("1_lmw3m")

[node name="LevelUpPanel" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_3u575")
item_option = ExtResource("3_dvewp")

[node name="Panel" type="Panel" parent="."]
offset_left = 111.0
offset_top = 36.0
offset_right = 211.0
offset_bottom = 166.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 96.0
offset_bottom = 26.0
text = "Level up!"
label_settings = SubResource("LabelSettings_8slju")

[node name="UpgradeOptions" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 25.0
offset_right = 96.0
offset_bottom = 58.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Panel"]
stream = ExtResource("1_20wpr")
volume_db = -3.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
